--- a/public/front_theme/css/theme.css
+++ b/public/front_theme/css/theme.css
@@ -13,6 +13,10 @@
     font-family: helvetica bold;
 }
 
+.btn-group.show.case_study_select_btn {
+    width: 100% !important;
+}
+
 .web-h1 {
     font-size: 48px !important;
 }
