--- a/public/front_theme/css/theme.css
+++ b/public/front_theme/css/theme.css
@@ -2484,7 +2484,7 @@ ul.CTAs a {
         position: absolute;
         top: 20%;
         left: 0;
-        transform: translateY(-20%);
+        transform: translateY(-50%);
         display: inline-block;
         width: 50%;
     }
@@ -2584,6 +2584,9 @@ ul.CTAs a {
     .team-box {
         height: 370px;
     }
+    /* .multiselect-native-select {
+        width: 215px;
+    } */
 }
 
 @media (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) {
@@ -2661,6 +2664,9 @@ ul.CTAs a {
         font-size: 36px !important;
         line-height: 40px !important;
         margin-bottom: 30px !important;
+    }
+    .multiselect-native-select {
+        width: 180px !important;
     }
 }
 
@@ -3131,6 +3137,7 @@ ul.CTAs a {
         transform: none;
         width: 100%;
         margin-bottom: 30px;
+        padding-top: 70px !important;
     }
     .slider-flex-wrap {
         display: flex;
@@ -4115,3 +4122,10 @@ header nav.desktop-navbar .dropdown-menu {
 header nav.desktop-navbar .dropdown-item {
     padding: 0px 15px !important;
 }
+.single-portfolio p
+{
+    display: -webkit-box;
+  -webkit-line-clamp: 1;
+  -webkit-box-orient: vertical;  
+}
+ 
