--- a/public/front_theme/css/theme.css
+++ b/public/front_theme/css/theme.css
@@ -1,15 +1,15 @@
 @font-face {
-    src: url('../webfonts/helveticaneue.ttf');
+    src: url('../webfonts/Lato/Lato-Regular.ttf');
     font-family: helvetica regular;
 }
 
 @font-face {
-    src: url('../webfonts/HelveticaLTStd-Light.otf');
+    src: url('../webfonts/Lato/Lato-Light.ttf');
     font-family: helvetica light;
 }
 
 @font-face {
-    src: url('../webfonts/HelveticaLTStd-Bold.otf');
+    src: url('../webfonts//Lato/Lato-Bold.ttf');
     font-family: helvetica bold;
 }
 
@@ -1983,6 +1983,26 @@ ul.CTAs a {
     transition: ease-in .2s;
     opacity: 1;
     cursor: pointer;
+}
+
+.message-box {
+    display: block;
+    margin: 0 30px;
+    width: 100%;
+}
+
+.message-box i {
+    font-weight: bold !important;
+    font-size: 30px;
+    margin-bottom: 20px;
+}
+
+.message-box.error-box i {
+    color: #9f9f9f;
+}
+
+.message-box.success-box i {
+    color: #9f9f9f;
 }
 
 
@@ -4114,4 +4134,86 @@ header nav.desktop-navbar .dropdown-menu {
 
 header nav.desktop-navbar .dropdown-item {
     padding: 0px 15px !important;
+}
+
+.case-study-dropdown-ul li {
+    margin: 0 20px !important;
+}
+
+.case-study-dropdown .dropdown-toggle {
+    padding: 10px 40px 10px 30px;
+    border: 1px solid #000;
+    border-radius: 25px;
+    background-color: #fff;
+    color: #000;
+    min-width: 270px;
+    font-size: 16px;
+}
+
+.case-study-dropdown .dropdown-toggle::after {
+    display: inline-block;
+    width: 0;
+    height: 0;
+    margin-left: 0.255em;
+    vertical-align: 0.255em;
+    content: "\f0b0";
+    font-family: 'Font Awesome 5 Free';
+    border: 0 !important;
+    font-weight: bold;
+    font-size: 12px;
+}
+
+.case-study-dropdown-btn:not(:disabled):not(.disabled).active,
+.case-study-dropdown-btn:not(:disabled):not(.disabled):active,
+.show>.case-study-dropdown-btn.dropdown-toggle {
+    color: #fff;
+    background-color: #000;
+    border-color: #000;
+    border-radius: 25px 25px 0 0 !important;
+}
+
+.case-study-dropdown-btn:not(:disabled):not(.disabled).active:focus,
+.case-study-dropdown-btn:not(:disabled):not(.disabled):active:focus,
+.show>.case-study-dropdown-btn.dropdown-toggle:focus {
+    box-shadow: none;
+}
+
+.case-study-dropdown .dropdown-menu {
+    padding: 10px 15px;
+    margin: 0;
+    font-size: 16px;
+    color: #000;
+    background-color: #fff;
+    background-clip: padding-box;
+    border: 1px solid #000;
+    border-radius: 0 0 25px 25px;
+    width: 100%;
+}
+
+.case-study-dropdown .dropdown-menu.show {
+    transform: translate3d(0px, 42px, 0px);
+}
+
+transform: translate3d(0px,
+42px,
+0px);
+
+}
+px);
+
+}
+x);
+
+}
+x);
+
+}
+
+}
+);
+
+}
+
+}
+
 }
