--- a/public/front_theme/css/theme.css
+++ b/public/front_theme/css/theme.css
@@ -1045,7 +1045,7 @@ section.center-detail-block h4 {
 
 section.creative-slider .swiper-container {
     width: 100%;
-    height: 300px;
+    /* height: 300px; */
     margin: 35px auto;
 }
 
@@ -1067,24 +1067,27 @@ section.creative-slider .swiper-slide {
     -webkit-align-items: center;
     align-items: center;
 }
-
+.swiper-nav-industries {
+    position: relative;
+    width: 100px;
+}
 section.creative-slider .swiper-button-next,
 section.creative-slider .swiper-button-prev {
-    position: absolute;
-    /* top: 7%;
-    width: calc(var(--swiper-navigation-size)/ 44 * 27);
-    height: var(--swiper-navigation-size);
-    margin-top: calc(-1 * var(--swiper-navigation-size)/ 2); */
+    /* position: absolute;
     top: 0 !important;
     width: 15% !important;
     height: 100% !important;
-    margin-top: 0 !important;
+    margin-top: 0 !important; */
     z-index: 10;
     cursor: pointer;
     display: flex;
     align-items: center;
     justify-content: center;
     color: var(--swiper-navigation-color, var(--swiper-theme-color));
+    background: #000;
+    width: 35px;
+    height: 35px;
+    border-radius: 50%;
 }
 
 .swiper-button-next:focus,
@@ -1095,29 +1098,31 @@ section.creative-slider .swiper-button-prev {
 section.creative-slider .swiper-button-next::after,
 section.creative-slider .swiper-button-prev::after {
     color: #fff !important;
+    font-size: 16px;
+    font-weight: bold;
 }
 
 section.creative-slider .swiper-button-next {
-    right: 0 !important;
-    background: -moz-linear-gradient(left, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0) 1%, rgba(0, 0, 0, 0.65) 50%, rgba(0, 0, 0, 0.99) 99%, rgba(0, 0, 0, 1) 100%);
+    /* right: 0 !important; */
+    /* background: -moz-linear-gradient(left, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0) 1%, rgba(0, 0, 0, 0.65) 50%, rgba(0, 0, 0, 0.99) 99%, rgba(0, 0, 0, 1) 100%); */
     /* FF3.6-15 */
-    background: -webkit-linear-gradient(left, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0) 1%, rgba(0, 0, 0, 0.65) 50%, rgba(0, 0, 0, 0.99) 99%, rgba(0, 0, 0, 1) 100%);
+    /* background: -webkit-linear-gradient(left, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0) 1%, rgba(0, 0, 0, 0.65) 50%, rgba(0, 0, 0, 0.99) 99%, rgba(0, 0, 0, 1) 100%); */
     /* Chrome10-25,Safari5.1-6 */
-    background: linear-gradient(to right, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0) 1%, rgba(0, 0, 0, 0.65) 50%, rgba(0, 0, 0, 0.99) 99%, rgba(0, 0, 0, 1) 100%);
+    /* background: linear-gradient(to right, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0) 1%, rgba(0, 0, 0, 0.65) 50%, rgba(0, 0, 0, 0.99) 99%, rgba(0, 0, 0, 1) 100%); */
     /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-    filter: progid: DXImageTransform.Microsoft.gradient( startColorstr='#00000000', endColorstr='#000000', GradientType=1);
+    /* filter: progid: DXImageTransform.Microsoft.gradient( startColorstr='#00000000', endColorstr='#000000', GradientType=1); */
     /* IE6-9 */
 }
 
 section.creative-slider .swiper-button-prev {
-    left: 0 !important;
-    background: -moz-linear-gradient(left, rgba(0, 0, 0, 1) 0%, rgba(0, 0, 0, 0.99) 1%, rgba(0, 0, 0, 0.65) 50%, rgba(0, 0, 0, 0) 99%, rgba(0, 0, 0, 0) 100%);
+    /* left: 0 !important; */
+    /* background: -moz-linear-gradient(left, rgba(0, 0, 0, 1) 0%, rgba(0, 0, 0, 0.99) 1%, rgba(0, 0, 0, 0.65) 50%, rgba(0, 0, 0, 0) 99%, rgba(0, 0, 0, 0) 100%); */
     /* FF3.6-15 */
-    background: -webkit-linear-gradient(left, rgba(0, 0, 0, 1) 0%, rgba(0, 0, 0, 0.99) 1%, rgba(0, 0, 0, 0.65) 50%, rgba(0, 0, 0, 0) 99%, rgba(0, 0, 0, 0) 100%);
+    /* background: -webkit-linear-gradient(left, rgba(0, 0, 0, 1) 0%, rgba(0, 0, 0, 0.99) 1%, rgba(0, 0, 0, 0.65) 50%, rgba(0, 0, 0, 0) 99%, rgba(0, 0, 0, 0) 100%); */
     /* Chrome10-25,Safari5.1-6 */
-    background: linear-gradient(to right, rgba(0, 0, 0, 1) 0%, rgba(0, 0, 0, 0.99) 1%, rgba(0, 0, 0, 0.65) 50%, rgba(0, 0, 0, 0) 99%, rgba(0, 0, 0, 0) 100%);
+    /* background: linear-gradient(to right, rgba(0, 0, 0, 1) 0%, rgba(0, 0, 0, 0.99) 1%, rgba(0, 0, 0, 0.65) 50%, rgba(0, 0, 0, 0) 99%, rgba(0, 0, 0, 0) 100%); */
     /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-    filter: progid: DXImageTransform.Microsoft.gradient( startColorstr='#000000', endColorstr='#00000000', GradientType=1);
+    /* filter: progid: DXImageTransform.Microsoft.gradient( startColorstr='#000000', endColorstr='#00000000', GradientType=1); */
     /* IE6-9 */
 }
 
@@ -1156,7 +1161,44 @@ section.creative-slider .swiper-button-prev.swiper-button-disabled {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    width: 100%
+    width: 100%;
+    text-align: left;
+}
+
+.creative-slider {
+    position: relative;
+    background-size: cover !important;
+}
+.creative-slider-blur {
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0,0,0,0.2);
+    backdrop-filter: blur(2px);
+    display: block;
+    z-index: 2;
+}
+.slide-container{
+    position: relative;
+    z-index: 4;
+}
+.creative-slider .swiper-slide-active{
+    transition: ease-in 1s;
+}
+.creative-slider .swiper-slide-active .creative-box{
+    transform: scale(1);
+    transition: ease-in 1s;
+}
+.creative-slider .swiper-slide-active .creative-box{
+    transform: scale(1.1);
+    transition: ease-in 1s;
+}
+.creative-slider .swiper-wrapper{
+    padding: 20px 10px;
 }
 
 
@@ -1989,6 +2031,10 @@ ul.CTAs a {
     display: block;
     margin: 0 30px;
     width: 100%;
+    text-align: center;
+}
+.message-box img{
+    display: inline-block;
 }
 
 .message-box i {
@@ -3007,10 +3053,6 @@ ul.CTAs a {
     .creative-box {
         height: 220px;
         position: relative;
-    }
-    section.creative-slider .swiper-button-next::after,
-    section.creative-slider .swiper-button-prev::after {
-        font-size: 32px !important;
     }
     .news-box {
         border-right: none !important;
