--- a/public/front_theme/css/theme.css
+++ b/public/front_theme/css/theme.css
@@ -892,48 +892,14 @@ section.design-banner a.float-right {
     width: 100%;
 }
 
-.ekko-lightbox .modal-dialog {
-    width: 100% !important;
-    max-width: 100% !important;
-    margin: 0 auto !important;
+.single-portfolio p{
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    min-height: 45px;
 }
-
-.ekko-lightbox .modal-dialog img {
-    width: 90% !important;
-    max-width: 90% !important;
-    padding-bottom: 50px !important;
-}
-
-.ekko-lightbox .modal-content {
-    background-color: transparent;
-    border: none !important;
-}
-
-.ekko-lightbox-container>div.ekko-lightbox-item {
-    text-align: center;
-}
-
-.ekko-lightbox .modal-header {
-    padding: 0rem 1rem;
-    border: 0;
-}
-
-.ekko-lightbox .close {
-    opacity: 1 !important;
-    font-size: 2.5rem !important;
-    color: #F5F5F5 !important;
-    text-shadow: none !important;
-    transition: all .3s ease !important;
-}
-
-.ekko-lightbox .close:hover {
-    color: #1F1F1F !important;
-}
-
-.ekko-lightbox-nav-overlay a:hover {
-    color: #fff !important;
-}
-
 
 /*** Portfolio End ***/
 
@@ -3258,7 +3224,7 @@ ul.CTAs a {
 }
 
 .web-border-radius-5 {
-    border-radius: 5 px !important;
+    border-radius: 5px !important;
 }
 
 .category-pills .nav-link .see-more-tag {
